# bioemu-sidechain-benchmark

./: .gitignore  README.md  config.yaml  run_comparison.py  run_pipeline.py
envs/bioemu-env/: pyproject.toml
envs/flowpacker-env/: pyproject.toml
envs/hpacker-env/: pyproject.toml
mdp/: em_solvated.mdp  em_vacuum.mdp
pipeline/: bioemu.py  flowpacker.py  gromacs.py  hpacker.py  input.py  molprobity.py  prepare.py  utils.py
