[project]
name = "hpacker-env"
version = "0.1.0"
description = "Environment for HPacker sidechain packing"
requires-python = ">=3.10,<3.12"
dependencies = [
    "torch==1.13.1",
    "biopython==1.81",
    "e3nn==0.5.0",
    "numpy<2",
    "h5py",
    "hdf5plugin",
    "sqlitedict",
    "tqdm",
    "progress",
    "hpacker",
]

[tool.uv.sources]
hpacker = { git = "https://github.com/gvisani/hpacker.git" }

[[tool.uv.index]]
url = "https://pypi.org/simple"

[[tool.uv.index]]
url = "https://download.pytorch.org/whl/cu117"
default = true
